Saints-MrBond Style Update

--- a/B-Topic/Support/MrBond.html
+++ b/B-Topic/Support/MrBond.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Bond : Support</title>
         <link rel="shortcut icon" type="image/x-icon" href="../../favicon.ico">
-        <style> @import url("../../Frame/CSS/MainPage.css");</style>
+        <style> @import url("../../Frame/CSS/Core/NeinMainPro.css");</style>
     </head>
 <!-- Nav Starts -->
     <body>
@@ -20,26 +20,19 @@
 <!--Intro Starts -->
                 <section id="sainti" aria-label="HaleI"></section>
 <!--Main Content -->
-                <section aria-label="blend" class="col-ContX col-lg-ContL col-ContM col-sm-ContS center-block panel-body">
-                    <main id="bond-m" aria-label="hale-profile"></main>
-<!--Letter Menu-->
-                <hgroup class="bible-content tc">
-                    <h5>Phillip is able to receive letters.</h5></hgroup>
-                <section aria-label="MHWrl" class="comment-content">
-                    <h4>Send a Letter</h4>
-                    <p> Letters must contain your return address or they won't be received.</p></section>
+                <main id="bondss" class="col-ContX col-lg-ContL col-ContM col-sm-ContS" aria-label="Bondlife">
+<!--Top Page Intro-->
+                    <section aria-label="FashBondTop" class="panel-body">
+                        <div class="panel panel-default panel-body">
+<!--Profile-->
+                            <section id="bond-m" aria-label="bond-profile"></section>
 <!--Letter Guide-->
-                <div id="LetterG" aria-label="Letter"></div>
-                <div id="bondlet" aria-label="ELetter"></div>
-<!--Commissary Menu--> 
-                <hgroup class="bible-content tc">
-                    <h5 class="tc">Phillip is able to receive Prison Commissary.</h5>
-                    <h5>Commissary Link: <a href="https://www.moneygram.com/paybills?receiveCode=7932">MoneyGram: Bureau of Prisons</a></h5></hgroup>
+                            <section id="bondlet" aria-label="ELetter"></section>
+                            <section id="LetterG" aria-label="Letter"></section>
 <!--Commissary Guide--> 
-                <section aria-label="MHComs" class="comment-content">
-                    <h4>Send Commissary</h4>
-                    <div id="CommisM" aria-label="CommisM"></div>
-                    <div id="bondsend" aria-label="ECommis"></div></section></section>
+                            <div id="bondsend" aria-label="ECommis"></div>
+                            <div id="CommisM" aria-label="CommisM"></div>
+                </div></section></main>
 <!--SideBars -->
                 <aside class="asidefixed">
                     <!--Topic -->
@@ -48,7 +41,7 @@
                     <aside id="GabSSide" class="asidefixed_g col-SideX col-lg-SideL col-SideM col-sm-SideS"></aside>
                 </aside>
 <!--Read More -->
-                <section id="bondwp" aria-label="roofw" class="blog-content col-ContX col-lg-ContL col-ContM col-sm-ContS"></section>
+                <section id="bondwp" aria-label="bondw" class="blog-content col-ContX col-lg-ContL col-ContM col-sm-ContS"></section>
 <!-- Footer -->
                 <footer id="Bnssfooty" class="col-MainX col-lg-MainL col-MainM col-sm-MainS"></footer>
 <!--Blog Frame Close -->
