--- a/B-Topic/Support/JohnEarnest.html
+++ b/B-Topic/Support/JohnEarnest.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Earnest : Support</title>
         <link rel="shortcut icon" type="image/x-icon" href="../../favicon.ico">
-        <style> @import url("../../Frame/CSS/MainPage.css");</style>
+        <style> @import url("../../Frame/CSS/Core/NeinMainPro.css");</style>
     </head>
 <!-- Nav Starts -->    
     <body>
@@ -20,26 +20,19 @@
 <!--Intro Starts -->
                 <section id="sainti" aria-label="earnestI"></section>
 <!--Main Content -->
-                <section aria-label="blend" class="col-ContX col-lg-ContL col-ContM col-sm-ContS center-block panel-body">
-                    <main id="earn-m" aria-label="earnest-profile"></main>
-<!--Letter Menu-->
-                <hgroup class="bible-content">
-                    <h5>John is able to receive letters.</h5></hgroup>
-                <section aria-label="JTEWrl" class="comment-content">
-                    <h4>Send a Letter</h4>
-                    <p>Letters must contain your return address or they won't be received.</p></section>
+                <main id="earnss" class="col-ContX col-lg-ContL col-ContM col-sm-ContS" aria-label="Earnlife">
+<!--Top Page Intro-->
+                    <section aria-label="FashEarnestTop" class="panel-body">
+                        <div class="panel panel-default panel-body">
+<!--Profile-->
+                            <section id="earn-m" aria-label="earnest-profile"></section>
 <!--Letter Guide-->
-                <div id="LetterG" aria-label="GLetter"></div>
-                <div id="earnestlet" aria-label="ELetter" ></div>
-<!--Commissary Menu-->
-                <hgroup class="bible-content tc">
-                    <h5 class="tc">John is able to receive Prison Commissary.</h5>
-                    <h5>Commissary Link: <a href="https://www.jpay.com/">JPay: Pleasant Valley State Prison</a></h5></hgroup>
+                            <section id="LetterG" aria-label="GLetter"></section>
+                            <section id="earnestlet" aria-label="ELetter"></section>
 <!--Commissary Guide-->       
-                <section aria-label="JEComs" class="comment-content">
-                    <h4>Send Commissary</h4>
-                <div id="CommisM" aria-label="GCommis"></div>
-                <div id="earnestsend" aria-label="ECommis"></div></section></section>
+                            <section id="CommisM" aria-label="GCommis"></section>
+                            <section id="earnestsend" aria-label="ECommis"></section>
+                </div></section></main>
 <!--SideBars -->
                 <aside class="asidefixed">
                     <!--Topic -->
