--- a/B-Topic/Support/MrBond.html
+++ b/B-Topic/Support/MrBond.html
@@ -30,8 +30,8 @@
                             <section id="bondlet" aria-label="ELetter"></section>
                             <section id="LetterG" aria-label="Letter"></section>
 <!--Commissary Guide--> 
-                            <div id="bondsend" aria-label="ECommis"></div>
-                            <div id="CommisM" aria-label="CommisM"></div>
+                            <section id="bondsend" aria-label="ECommis"></section>
+                            <section id="CommisM" aria-label="CommisM"></section>
                 </div></section></main>
 <!--SideBars -->
                 <aside class="asidefixed">
