--- a/B-Topic/Support/MatthewHale.html
+++ b/B-Topic/Support/MatthewHale.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Hale : Support</title>
         <link rel="shortcut icon" type="image/x-icon" href="../../favicon.ico">
-        <style> @import url("../../Frame/CSS/MainPage.css");</style>
+        <style> @import url("../../Frame/CSS/Core/NeinMainPro.css");</style>
     </head>
 <!-- Nav Starts -->
     <body>
@@ -20,26 +20,19 @@
 <!--Intro Starts -->
                 <section id="sainti" aria-label="HaleI"></section>
 <!--Main Content -->
-                <section aria-label="blend" class="col-ContX col-lg-ContL col-ContM col-sm-ContS center-block panel-body">
-                    <main id="hale-m" aria-label="hale-profile"></main>
-<!--Letter Menu-->
-                <hgroup class="bible-content tc">
-                    <h5>Matthew is able to receive letters.</h5></hgroup>
-                <section aria-label="MHWrl" class="comment-content">
-                    <h4>Send a Letter</h4>
-                    <p> Letters must contain your return address or they won't be received.</p></section>
+                <main id="haless" class="col-ContX col-lg-ContL col-ContM col-sm-ContS" aria-label="Halelife">
+<!--Top Page Intro-->
+                    <section aria-label="FashHaleTop" class="panel-body">
+                        <div class="panel panel-default panel-body">
+<!--Profile-->
+                            <section id="hale-m" aria-label="hale-profile"></section>
 <!--Letter Guide-->
-                <div id="LetterG" aria-label="Letter"></div>
-                <div id="halelet" aria-label="ELetter"></div>
-<!--Commissary Menu--> 
-                <hgroup class="bible-content tc">
-                    <h5 class="tc">Matthew is able to receive Prison Commissary.</h5>
-                    <h5>Commissary Link: <a href="https://www.moneygram.com/paybills?receiveCode=7932">MoneyGram: Bureau of Prisons</a></h5></hgroup>
+                            <section id="halelet" aria-label="ELetter"></section>
+                            <section id="LetterG" aria-label="Letter"></section>
 <!--Commissary Guide--> 
-                <section aria-label="MHComs" class="comment-content">
-                    <h4>Send Commissary</h4>
-                    <div id="CommisM" aria-label="CommisM"></div>
-                    <div id="halesend" aria-label="ECommis"></div></section></section>
+                            <section id="halesend" aria-label="ECommis"></section>
+                            <section id="CommisM" aria-label="CommisM"></section>
+                </div></section></main>
 <!--SideBars -->
                 <aside class="asidefixed">
                     <!--Topic -->
